conncet data apotek

--- a/app/src/main/res/layout/bottom_sheet_apotek.xml
+++ b/app/src/main/res/layout/bottom_sheet_apotek.xml
@@ -84,6 +84,7 @@
             android:text="See More"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:layout_marginBottom="8dp"
             android:textColor="@android:color/white"
             android:background="@drawable/rounded_red"
             android:textAllCaps="false"
@@ -97,6 +98,7 @@
             android:text="Direct"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:layout_marginBottom="8dp"
             android:textColor="@android:color/white"
             android:background="@drawable/rounded_green"
             android:textAllCaps="false"
