--- a/app/src/main/res/layout/activity_see_more.xml
+++ b/app/src/main/res/layout/activity_see_more.xml
@@ -27,6 +27,7 @@
             android:src="@drawable/ic_chevron_left" />
 
         <TextView
+            android:id="@+id/nama_apotek"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
