--- a/app/src/main/res/layout/row_see_more.xml
+++ b/app/src/main/res/layout/row_see_more.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/iv_obat"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -36,8 +36,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/iv_obat"
             app:layout_constraintStart_toStartOf="@+id/iv_obat"
