--- a/app/src/main/res/layout/item_apotek_second.xml
+++ b/app/src/main/res/layout/item_apotek_second.xml
@@ -6,6 +6,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="20dp">
 
     <android.support.constraint.ConstraintLayout
