--- a/app/src/main/res/layout/activity_detail_obat.xml
+++ b/app/src/main/res/layout/activity_detail_obat.xml
@@ -30,7 +30,6 @@
             android:id="@+id/nama_obat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="32dp"
             android:layout_toRightOf="@id/btn_back_obat_details"
             android:text="Nama Obat"
@@ -38,6 +37,18 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/harga_obat"
+            android:layout_toRightOf="@id/btn_back_obat_details"
+            android:layout_marginEnd="32dp"
+            android:text="Harga Obat"
+            android:textSize="15sp"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:layout_below="@+id/nama_obat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <ImageView
